--- a/style.css
+++ b/style.css
@@ -22,3 +22,20 @@ body {
     font-size: 18px;
     color: #e5e7eb;
 }
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+}
+
+.navbar-left, .navbar-right {
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
