--- a/style.css
+++ b/style.css
@@ -39,3 +39,9 @@ ul {
     justify-content: center;
     align-items: center;
 }
+
+h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
