--- a/style.css
+++ b/style.css
@@ -10,17 +10,18 @@ body {
 }
 
 .first-section {
-    background-color: #1f2937;
+    background-color: #221656;
 }
 
 .header-logo {
     font-size: 24px;
-    color: #f9faf8;
+    color: #fff3d3;
+    font-weight: 600;
 }
 
 .header-link {
     font-size: 18px;
-    color: #e5e7eb;
+    color: #f8fafc;
 }
 
 .navbar {
@@ -43,5 +44,46 @@ ul {
 h1 {
     font-size: 48px;
     font-weight: bolder;
-    color: #f9faf8;
+    color: #fff3d3;
+}
+
+.hero {
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+}
+
+.hero-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+}
+
+.hero-left {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    margin-left: 355px;
+}
+
+img {
+    margin-bottom: 50px;
+}
+
+.p-first {
+    font-size: 18px;
+    color: #f8fafc;
+}
+
+.sign-up-first-section {
+    background-color: #00aec1;
+    color: #fff3d3;
+    width: 100px;
+    height: 40px;
+    border: 1px #00aec1;
+    border-radius: 10px;
+    font-weight: bold;
 }
