--- a/style.css
+++ b/style.css
@@ -88,3 +88,39 @@ img {
     border-radius: 10px;
     font-weight: bold;
 }
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    text-align: center;
+}
+
+.four-image-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 65px;
+    padding-left: 350px;
+    padding-right: 350px;
+    padding-bottom: 100px;
+    align-items: center;
+}
+
+.box-color {
+    border: 3px solid #00aec1;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.second-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.p-second {
+    text-align: center;
+    font-size: 18px;
+}
