Adjusting section one and two

--- a/style.css
+++ b/style.css
@@ -11,17 +11,26 @@ body {
 
 .first-section {
     background-color: #221656;
+    padding-top: 35px;
+    padding-bottom: 5px;
+    padding-right: 300px;
+}
+
+a {
+    text-decoration: none;
 }
 
 .header-logo {
     font-size: 24px;
     color: #fff3d3;
     font-weight: 600;
+    margin-left: 90px;
 }
 
 .header-link {
     font-size: 18px;
     color: #f8fafc;
+    padding-left: 25px;
 }
 
 .navbar {
@@ -32,6 +41,7 @@ body {
 ul {
     display: flex;
     flex-direction: row;
+    padding-left: 335px;
 }
 
 .navbar-left, .navbar-right {
@@ -45,6 +55,8 @@ h1 {
     font-size: 48px;
     font-weight: bolder;
     color: #fff3d3;
+    padding-bottom: 25px;
+    width: 200%;
 }
 
 .hero {
@@ -62,21 +74,24 @@ h1 {
 }
 
 .hero-left {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     width: 50%;
-    justify-content: center;
-    margin-left: 355px;
+    /* justify-content: center; */
+    margin-left: 275px;
 }
 
 img {
     margin-bottom: 50px;
     border-radius: 10px;
+    margin-left: 275px;
 }
 
 .p-first {
-    font-size: 18px;
+    font-size: 24px;
     color: #f8fafc;
+    width: 200%;
+    /* padding-bottom: 100px; */
 }
 
 .sign-up-first-section {
@@ -86,7 +101,7 @@ img {
     height: 40px;
     border: 1px #00aec1;
     border-radius: 10px;
-    font-weight: bold;
+    font-size: 18px;
 }
 
 h2 {
@@ -101,8 +116,8 @@ h2 {
     flex-direction: row;
     justify-content: space-between;
     padding-top: 65px;
-    padding-left: 350px;
-    padding-right: 350px;
+    padding-left: 325px;
+    padding-right: 325px;
     padding-bottom: 100px;
     align-items: center;
 }
@@ -115,6 +130,7 @@ h2 {
 }
 
 .second-section {
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
