--- a/style.css
+++ b/style.css
@@ -123,11 +123,42 @@ h2 {
 }
 
 /*  */
-.box1 img {
-    object-fit: contain;
+/* .box img {
+    width: 100%;
+    height: 100%;
+} */
+
+.testing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 100px;
 }
 
-/*  */
+.authenticity {
+    max-width: 80%;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.empathy {
+    max-width: 80%;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.resilience {
+    max-width: 80%;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.innovation {
+    max-width: 80%;
+    margin-top: 15px;
+    margin-left: 20px;
+}
 
 .box-color {
     border: 5px solid #fff3d3;
